# Propex

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PRD.md  README.md  STACK.md  architecture.md  docker-compose.yml  eslint.config.js  mvp-tech-doc.md  package-lock.json  package.json  pnpm-workspace.yaml  populate_neo4j_stub.py  pyproject.toml  pyrightconfig.json  sync.ps1  systemdesign.md  test_cve.json  verify_phase3.py
.github/workflows/: ci.yml
apps/web-dashboard/: eslint.config.js  package-lock.json  package.json  tailwind.config.ts
docs/: 01-product-requirements.md  02-user-stories-and-acceptance-criteria.md  03-information-architecture.md  04-system-architecture.md  05-database-schema.md  06-api-contracts.md  07-monorepo-structure.md  08-scoring-engine-spec.md  09-engineering-scope-definition.md  10-development-phases.md  11-environment-and-devops.md  12-testing-strategy.md  contributing.md  phase-tasks.md  phase6-hardening-checklist.md
docs/runbooks/: gemini-rate-limit.md  postgres-restart.md  redpanda-consumer-lag.md
infra/: upptime.yml
infra/fly/: fly.api-gateway.toml  fly.impact-analyzer.toml
infra/k6/: load_test.js  throughput_test.js
infra/prometheus/: prometheus.yml
infra/terraform/: main.tf  variables.tf
libs/python-shared/: pyproject.toml
libs/python-shared/odepm_common/: github_client.py  manifest_detector.py  version_utils.py
libs/python-shared/odepm_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/python-shared/odepm_common/auth/: middleware.py
libs/python-shared/odepm_common/cache/: redis_client.py
libs/python-shared/odepm_common/db/: models.py  neo4j_client.py  session.py
libs/python-shared/odepm_common/kafka/: producer.py
libs/python-shared/odepm_common/models/: cve.py
libs/python-shared/odepm_common/observability/: tracing.py
libs/scoring-engine/: pyproject.toml
libs/scoring-engine/odepm_scoring/: calculator.py  engine.py  epss.py
libs/scoring-engine/tests/: test_engine.py
migrations/: env.py
migrations/versions/: 1e23c734fb1d_initial_schema.py
scripts/: init-kafka.sh  seed-db.py  setup-dev.ps1  simulate_demo.ps1
services/api-gateway/: Dockerfile  requirements.txt
services/coordinator/: Dockerfile  requirements.txt
services/cve-ingestion/: Dockerfile  requirements.txt
services/impact-analyzer/: Dockerfile  requirements.txt
services/issue-creator/: Dockerfile  requirements.txt
services/maven-resolver/: Dockerfile  requirements.txt
services/npm-resolver/: Dockerfile  (+1 more)
(+105 files in other folders)
