[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odepm-common"
version = "0.1.0"
description = "Shared utilities for ODEPM"
authors = [
    {name = "Sarthak", email = "sarth@example.com"}
]
dependencies = [
    "pydantic>=2.6.0",
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
    "neo4j>=5.17.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "fastapi>=0.109.0",
    "alembic>=1.13.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["odepm_common*"]
